# cplusplus-week-4-exercises

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-tests.yml
src/: main.cpp  main.h
tests/: main_test.cpp
